Bug 107248 - [G45 ILK G965] Texture handling broken
Summary: [G45 ILK G965] Texture handling broken
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i915 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Nanley Chery
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2018-07-16 18:10 UTC by Mark Janes
Modified: 2018-07-19 18:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2018-07-16 18:10:40 UTC
~20 tests per platform broken by:

fbe01625f6bf2cef6742e1ff0d3d44a2afec003e
Author:     Nanley Chery <nanley.g.chery@intel.com>
AuthorDate: Mon Jun 11 10:23:23 2018 -0700
Commit:     Nanley Chery <nanley.g.chery@intel.com>
CommitDate: Fri Jul 13 08:31:21 2018 -0700

Parent:     6c9947c3ef3 i965/miptree: Delete MIPTREE_CREATE_LINEAR
Containing: master
Follows:    18.1-branchpoint (1703)

i965/miptree: Share tiling_flags in miptree_create

Reviewed-by: Topi Pohjolainen <topi.pohjolainen@intel.com>


EG:

piglit.­spec.­ext_texture_array.­copyteximage 1d_array
/tmp/build_root/m32/lib/piglit/bin/copyteximage 1D_ARRAY -auto
Testing GL_TEXTURE_1D_ARRAY
NOTE: We use glCopyTexSubImage2D to set 4 texture layers at once.
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RED
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RG
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGB8
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGB16
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGB16F
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGB32F
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGBA8
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGBA16
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGBA16F
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_RGBA32F
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_COMPRESSED_RED
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_COMPRESSED_RG
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_COMPRESSED_RGB
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_COMPRESSED_RGBA
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_LUMINANCE
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_LUMINANCE_ALPHA
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_INTENSITY
Texture target = GL_TEXTURE_1D_ARRAY, Internal format = GL_DEPTH_COMPONENT
Probe color at (292,0)
  Expected: 191 191 191 255
  Observed: 128 128 128 255
Comment 1 Nanley Chery 2018-07-17 00:01:32 UTC
Thanks for the bug report. Patches are on the list:
https://patchwork.freedesktop.org/series/46636/
Comment 2 Nanley Chery 2018-07-19 18:08:36 UTC
The patches have been pushed.
g965 is fixed by e2e32b6afd4cd1cd091877b638288e861a537760
g45 and ilk are fixed by 44ab26d0c9bd95f8d15ead5b92f743ee13296aef


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.